--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="AboutWrapper">
         <h1 id="AboutMe">About Me</h1>
         <div class="text-center">
-            <img src="https://images.unsplash.com/photo-1581065178047-8ee15951ede6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img src="./headshot2.jpg"
                 id="myHeadshot" class=".mx-auto d-block img-circle" alt="Ashley Bain HeadShot">
             <div class="aboutText">
                 <p>Hey! I'm Ashley, a software developer!</P>
