functioning links to pages, added resume

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#AboutMe">About</a></li>
-                    <li><a href="#AboutMe">Resume</a></li>
-                    <li><a href="#skillsHeader">Skills</a></li>
-                    <li><a href="#PortfolioHeader">Portfolio</a></li>
+                    <li><a href="#homeLanding">Home</a></li>
+                    <li><a href="#aboutLanding">Resume & About</a></li>
+                    <li><a href="#skillsLanding">Skills</a></li>
+                    <li><a href="#PortfolioLanding">Portfolio</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -38,11 +38,14 @@
             </div>
         </div>
     </nav>
+    <div id= "homeLanding"></div>
 
     <div class="landingPage">
         <h1 id="myName">Ashley Bain</h1>
         <p id="whatIAm">Software Developer</p>
     </div>
+   
+    <div id="aboutLanding"></div>
     <div class="AboutWrapper">
         <h1 id="AboutMe">About Me</h1>
         <div class="text-center">
@@ -54,10 +57,11 @@
                     management, soft skills, and extensive experience in the finance & banking industry. If you want to
                     know more, download my Resume!</p>
             </div>
-            <button class="btn" id="downloadBtn"><i class="fas fa-download" id="downloadIcon"></i> Download
-                Resume</button>
+            <button class="btn" id="downloadBtn"><i class="fas fa-download" id="downloadIcon"><a href= "https://drive.google.com/file/d/1m_xSuxmOhsaYkwLRcpTmK-pQ1-6vS9TX/view?usp=sharing"></i> Download
+                Resume</a></button>
         </div>
     </div>
+    <div id="skillsLanding"></div>
     <div class="skillWrapper">
 
         <h1 id="skillsHeader">My Skills</h1>
@@ -101,6 +105,7 @@
             </div>
         </div>
     </div>
+    <div id= "PortfolioLanding"></div>
     <div class="PortfolioWrapper">
         <div class="container">
             <h1 id="PortfolioHeader">Portfolio</h1>
