updating resume link on portfolio

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     If you want to
                     know more, you can download my resume!</p>
             </div>
-            <button class="btn" id="downloadBtn"><i class="fas fa-download" id="downloadIcon"><a href= "https://drive.google.com/file/d/1m_xSuxmOhsaYkwLRcpTmK-pQ1-6vS9TX/view?usp=sharing"></i> Download
+            <button class="btn" id="downloadBtn"><i class="fas fa-download" id="downloadIcon"><a href= "https://docs.google.com/document/d/1tp-cz5_U1axk75siZJ9iXAexesFkOcSRyDymMGZDO3M/edit?usp=sharing"></i> Download
                 Resume</a></button>
         </div>
     </div>
